discussion/kv_engine/125919/125919_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

Change compaction to use the PiTR configuration

Change-Id: I0f1b686ff8190d087bba3630b371ca346985a35c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-04-20 08:23:37.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-20 08:44:07.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27612/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27612/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1785/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1106:17: error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
                oldest.time_since_epoch().count(),
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1205:1: note: "compact" declared here
LIBCOUCHSTORE_API
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/couchstore/include/libcouchstore/visibility.h:15:33: note: expanded from macro "LIBCOUCHSTORE_API"
#      define LIBCOUCHSTORE_API __attribute__((visibility("default")))
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1785/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1106:17:
error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1785/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23613/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1106:17:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23613/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11068/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3217/ : FAILURE

Compile error at [2020-04-20T08:40:58.496Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1107:30:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3217/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2260/ : FAILURE

Compile error at [2020-04-20T08:42:19.904Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1106:17:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2260/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3199/ : FAILURE

Compile error at [2020-04-20T08:40:16.576Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1107:30:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3199/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3279/ : FAILURE

Compile error at [2020-04-20T08:38:22.701Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1107:30:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3279/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/304/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
